Test Org - Speridian/src/objects/BA_Zipcode_Admin__c.object
<CustomObject>
    <fields>
        <fullName>Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_State__c</fullName>
        <label>State</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Zipcode Administration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rating Region</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zipcode Administrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>